kub/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-srv
spec:
  type: LoadBalancer
  selector:
    app: spring-app
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
