kub/app-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-srv
  labels:
    app: spring-srv
spec:
  selector:
    app: spring-app
  ports:
    - port: 8090
      targetPort: 8090
status:
  loadBalancer: {}
