kub/mysql-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-srv
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
