kub/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: public 
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: devopspractice.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: spring-srv
              servicePort: 8090
# kubectl port-forward -n app spring-app-6b49bf4494-8hd8g 8090
